# nba-azure-ml-pipeline

./: .gitignore  ProjectLog.md  README.md  pyproject.toml
config/: extract.yaml
data/raw/nba_api/: teamgamelog_team1610612744_2023-24_20251218T151002Z.json
docs/ChatGPTConvo/: 2025-12-15_001.md  2025-12-15_002.md  chatgpt_discussion_2025_12_17.md  promptfor1216.md
docs/architecture/: ARCHITECTURE.md  PRIVATE_ENDPOINT_SQL_CONNECTIVITY.md  data_dictionary_team_game_log.md
docs/decisions/: 0001-record-architecture-decisions.md
docs/howto/: DEV_SETUP.md  how_to_auth.md
docs/reference/: AZ900_networking_cheatsheet_private_link_endpoints_vpn_exr.md
infra/arm/: sql.json
infra/bicep/: bastion_vm.bicep  create_service_principal.bicep  landingzone.bicep  network.bicep  sql.bicep  sql_private_endpoint_dns.bicep
infra/sql/: 000_bootstrap_vm_identity.sql  001_create_fact_team_game_log.sql  zz_verify_table.sql
scripts/: exec_sql_with_aad.py  load_teamgamelog_to_sql.py  run_sql_file.py
scripts/powershell/: azcopy_login.ps1  create_tennant.ps1  deploy_landing_zone.ps1  test_upload.ps1
src/nba_pipeline/: smoke_test.py
src/nba_pipeline/db/: __init__.py  engine.py  retry.py
src/nba_pipeline/ingest/: fetch_team_gamelog_sample.py  normalize_teamgamelog.py  run_extract.py
src/nba_pipeline/ops/: __init__.py  blob_uploader.py
